--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -1,6 +1,6 @@
 #img-bg{
    
-    background-image: url('https://imgur.com/undefined.jpg');
+    background-image: url('https://imgur.com/C7SZ4Gz.jpg');
      min-height: 695px;
 
     background-position: center;
