atualização blog pessoal

--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,6 +1,6 @@
 #img-bg{
    
-    background-image: url('https://imgur.com/undefined.jpg');
+    background-image: url('https://imgur.com/PNr7DT1.jpg');
      min-height: 695px;
 
     background-position: center;
