--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -8,36 +8,40 @@
                     <h1 class="text-center">Cadastro</h1>
                     <div class=" form-group">
                         <label for="nome">Nome</label>
-                        <input type="form-control" type="text" name="nome" id="nome" placeholder="Seu nome">
+                        <input [(ngModel)]='user.nome' class="form-control" type="text" name="nome" id="nome"
+                            placeholder="Seu nome">
                     </div>
                     <div class=" form-group">
                         <label for="usuario">Usuario</label>
-                        <input type="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuario">
+                        <input [(ngModel)]='user.usuario' class="form-control" type="text" name="usuario" id="usuario"
+                            placeholder="Seu usuario">
                     </div>
                     <div class=" form-group">
                         <label for="foto">Link da Foto</label>
-                        <input type="form-control" type="text" name="foto" id="foto" placeholder="link da sua foto">
+                        <input [(ngModel)]='user.foto' class="form-control" type="text" name="foto" id="foto"
+                            placeholder="link da sua foto">
                     </div>
                     <div class=" form-group">
                         <label for="senha">Senha</label>
-                        <input type="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
+                        <input (input)='confirmeSenha($event)' class="form-control" type="password" name="senha"
+                            id="senha" placeholder="Sua senha">
                     </div>
                     <div class=" form-group">
-                        <label for="Confirmsenha"> Confirma Senha</label>
-                        <input type="form-control" type="password" name="Confirmsenha" id="Confirmsenha"
-                            placeholder="Confirme a senha">
+                        <label for="confirmSenha"> Confirma Senha</label>
+                        <input [(ngModel)]='user.senha' class="form-control" type="password" name="confirmSenha"
+                            id="confirmSenha" placeholder="Confirme a senha">
                     </div>
                     <div class=" form-group">
                         <label for="tipo">Tipo de usuario</label>
-                        <select class="form-control" name="tipo" id="tipo">
+                        <select class="form-control" name="tipo" id="tipo" (change)='tipoUser($event)'>
                             <option> Selecione um tipo de usuario</option>
-                            <option value="nomral">Normal</option>
+                            <option value="normal">Normal</option>
                             <option value="adm"> Administrador</option>
                         </select>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-danger" routerLink='/entrar'>Cancelar</button>
-                        <button type="submit" class="btn btn-success"> Cadastrar</button>
+                        <button type="submit" class="btn btn-danger mr-4" routerLink='/entrar'>Cancelar</button>
+                        <button type="submit" class="btn btn-success" (click)="cadastrar()"> Cadastrar</button>
                     </div>
                 </div>
 
