--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -4,20 +4,22 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6">
                     <h1 class="text-center mb-3">Entrar</h1>
-                    <div class=" form-group">
+                    <div class="form-group">
                         <label for="usuario">Usuario</label>
-                        <input type="form-control"  type="text" name="ususario" id="ususario" placeholder="Seu usuario">
+                        <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="usuario"
+                            id="usuario" placeholder="Seu usuario">
                     </div>
-                    <div class=" form-group">
+                    <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input type="form-control"  type="password" name="senha" id="senha" placeholder="Seu senha">
+                        <input [(ngModel)]='userLogin.senha' class="form-control" type="password" name="senha"
+                            id="senha" placeholder="Seu senha">
                     </div>
-                    <div class="d-flex justify-content-center" >
-                        <button  type="submit" class="btn btn-success">Entrar</button>
+                    <div class="d-flex justify-content-center">
+                        <button type="submit" class="btn btn-success" (click)='entrar()'>Entrar</button>
                     </div>
-                    <hr class="mt-5 mb-5"> 
+                    <hr class="mt-5 mb-5">
                     <p class="text-center">
-                        Não tem uma conta? <a routerLink= '/cadastrar'>Cadastre-se</a>
+                        Não tem uma conta? <a routerLink='/cadastrar'>Cadastre-se</a>
                     </p>
                 </div>
             </div>
