--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,11 +7,11 @@
     <div class="collapse navbar-collapse " id="conteudoNavbarSuportado">
         <ul class="navbar-nav mr-auto d-flex align-items-center">
             <li class="nav-item active">
-                <img src="https://imgur.com/opZxOJS.jpg" alt="nome do usuario " width="50px" height="50px"
+                <img src="{{foto}}" alt="nome do usuario " width="50px" height="50px"
                     class="img-fluid rounded-circle">
             </li>
             <li class="nav-item pl-3">
-                <p class="m-0 font-weight-bold text-white fs-16 ">Nome do Usuario</p>
+                <p class="m-0 font-weight-bold text-white fs-16 ">{{nome}}</p>
             </li>
             <li class="nav-item pl-3">
                 <a href="">
@@ -19,9 +19,9 @@
                 </a>
             </li>
         </ul>
-        <ul class="navbar-nav m-auto d-flex align-items-center">
+        <ul class="navbar-nav ml-auto d-flex align-items-center">
             <li class="nav-item pl-3">
-                <a class="m-0 font-weight-bold text-white fs-16">sair <i class="fa fa-sign-out" aria-hidden="true"></i>
+                <a (click)='sair()' class="m-0 font-weight-bold text-white fs-16">sair <i class="fa fa-sign-out" aria-hidden="true"></i>
                 </a>
             </li>
         </ul>
