--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -78,7 +78,7 @@
 
         <div class="modal-body">
           <div class="form-grup">
-            <label for="texto">Escolha um tema ou <a href=""> cadastre um novo</a></label>
+            <label for="texto">Escolha um tema ou <a  data-dismiss="modal" routerLink='/tema'> cadastre um novo</a></label>
             <select name="tema" id="tema" class="form-control"> 
               <option value="">Temas</option>
             </select>
