--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -32,7 +32,7 @@
     <div class="nav nav-tabs d-flex justify-content-center " id="nav-todasPostagens-tab" role="tablist">
       <a class="nav-item nav-link active text-success font-weight-bold" id="nav-home-tab" data-toggle="tab"
         href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as Postagem</a>
-
+ 
       <a (click)='findByIdUser()' class="nav-item nav-link text-success font-weight-bold " id="nav-minhasPostagens-tab"
         data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens"
         aria-selected="false">Minhas
@@ -70,6 +70,8 @@
             <p class="card-text mt-3">{{item.texto}}.</p>
             <p class="card-text"><small class="text-muted">{{item.date | date: 'dd/MM/yyyy'}} às {{item.date | date:
                 'HH:mm'}} </small></p>
+                <a [routerLink]="['/postagem-edit', item.id]"  class="text-info mr-3" href="">Editar</a>
+                <a [routerLink]="['/postagem-delete', item.id]" class="text-danger"href="">Apagar</a>
 
           </div>
         </div>
@@ -80,54 +82,56 @@
 
       <div class="card-columns" *ngFor='let tema of listaTemas'>
         <div class="card text-center" *ngFor='let item of tema.postagens'>
-            <div class="card-body">
-               <h5 class="card-title m-0">{{item.titulo}}</h5>
-               <p class="card-text mt-3">{{item.texto}}</p>
-               <p class="card-text"><small class="text-muted">{{item.date | date: 'dd/mm/yyyy'}} às {{item.date | date: 'HH:mm'}}</small> </p>   
-               <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small> </p>    
+          <div class="card-body">
+            <h5 class="card-title m-0">{{item.titulo}}</h5>
+            <p class="card-text mt-3">{{item.texto}}</p>
+            <p class="card-text"><small class="text-muted">{{item.date | date: 'dd/mm/yyyy'}} às {{item.date | date:
+                'HH:mm'}}</small> </p>
+            <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small> </p>
 
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado"
+      aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="TituloModalCentralizado">Título do modal</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-grup">
+              <label for="titulo">Titulo</label>
+              <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo"
+                placeholder="digite o titulo ">
             </div>
-        </div>
-    </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado"
-  aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="TituloModalCentralizado">Título do modal</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="form-grup">
-          <label for="titulo">Titulo</label>
-          <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo"
-            placeholder="digite o titulo ">
-        </div>
-      </div>
-      <div class="modal-body">
-        <div class="form-grup">
-          <label for="texto">Texto</label>
-          <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto" rows="3"></textarea>
-        </div>
-
-        <div class="modal-body">
-          <div class="form-grup">
-            <label for="texto">Escolha um tema ou <a data-dismiss="modal" routerLink='/tema'> cadastre um
-                novo</a></label>
-            <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema()'>
-              <option *ngFor='let item of listaTemas' value="{{item.id}}">{{item.descricao}}</option>
-            </select>
           </div>
+          <div class="modal-body">
+            <div class="form-grup">
+              <label for="texto">Texto</label>
+              <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto" rows="3"></textarea>
+            </div>
 
-          <div class="modal-footer">
-            <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-            <button type="button" class="btn btn-success" (click)='publicar()' data-dismiss="modal">Publicar</button>
+            <div class="modal-body">
+              <div class="form-grup">
+                <label for="texto">Escolha um tema ou <a data-dismiss="modal" routerLink='/tema'> cadastre um
+                    novo</a></label>
+                <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema()'>
+                  <option *ngFor='let item of listaTemas' value="{{item.id}}">{{item.descricao}}</option>
+                </select>
+              </div>
+
+              <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-success" (click)='publicar()'
+                  data-dismiss="modal">Publicar</button>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
